# showcase-news

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  Tiltfile
.github/: renovate.json
.github/workflows/: build.yml  check.yml  push.yml  test-e2e.yml  tilt-integration-test.yml  tilt.yml
agents/news-agent/: .env  Makefile  main.py  pyproject.toml
agents/summarizer-agent/: .env  Dockerfile  Makefile  main.py  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  namespace.yaml  news-agent.yaml  news-fetcher.yaml  news-workforce.yaml  summarizer-agent.yaml
deploy/: agent-gateway.yaml  agent-runtime-config.yaml  ai-gateway.yaml  experiment.yaml  kustomization.yaml  lgtm.yaml  news-agent-test-workflow-trigger.yaml  news-agent-test-workflow.yaml  otel-tempo-config.yaml  otel-testbench-config.yaml  tool-gateway.yaml
deploy/agentic-layer/: kustomization.yaml  observability-dashboard.yaml  otel-tempo-config.yaml
deploy/demo-workloads/: kustomization.yaml
deploy/infra/: kustomization.yaml  lgtm.yaml
deploy/librechat/: config.yaml  values.yaml
deploy/showcase-news/: kustomization.yaml  news-agent.yaml  news-fetcher.yaml  (+2 more)
docs/: antora.yml
mcp-servers/news-fetcher/: Dockerfile  pyproject.toml
mcp-servers/news-fetcher/news_fetcher/: __main__.py  rss_processor.py
mcp-servers/news_fetcher/: Dockerfile  pyproject.toml
mcp-servers/news_fetcher/news_fetcher/: __init__.py  __main__.py  rss_processor.py
n8n-workflows/: News Agent with Agent Gateway _ OpenAI API.json
scripts/: test-news-agent.sh
(+10 files in other folders)
