[project]
name = "news-fetcher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0b2",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.0",
    "requests>=2.31.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[project.scripts]
news_fetcher = "news_fetcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
