[project]
name = "news-fetcher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.1",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.0",
    "requests>=2.31.0"
]

[project.scripts]
news_fetcher = "news_fetcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
